Convert Registry to record
Signed-off-by: Jarno Elovirta <jarno@elovirta.com>